resolução dos erros da persistencia